test(lit): migrate generator test to lit
Signed-off-by: unlsycn <unlsycn@unlsycn.com>